--- a/responsive-website..html
+++ b/responsive-website..html
@@ -10,7 +10,7 @@
         body {
             max-width: 800px;
             margin: 0 auto;
-            border: 1px solid green;
+            /* border: 1px solid green; */
 
         }
 
@@ -30,6 +30,7 @@
             width: 50%;
         }
 
+        /* make image responsive inside */
         .split img {
             width: 100%;
         }
