--- a/responsive-website..html
+++ b/responsive-website..html
@@ -215,12 +215,12 @@
         </div>
     </section>
     <!-- 
-        1.viewport meta tag
-        2.CSS Relative Unit 
-        3.Responsive Image (fluid images)
-        4.body max-with and margin auto
-        5.Responsive split screen using flex
-        6.Grid Responsive (multi column)
+        1.use viewport meta tag
+        2.CSS Relative measuring Unit 
+        3.make image fluid (use % as width )
+        4.body max width and center position
+        5.two column using flex layout and media quary
+        6.multi column using grid and media quary 
         7.Responsive Manu (bootstrap responsive)--Future
      -->
 </body>
